# conveyancers-marketplace

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  GEMINI.md  LEGAL_NOTICE.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
admin-portal/: .env.example  Dockerfile  jest.config.js  next.config.js  package-lock.json  package.json  tsconfig.json
admin-portal/components/: AdminLayout.tsx
admin-portal/lib/: admin-metrics.ts  admin-summary.ts
admin-portal/pages/: _app.tsx  audit-log.tsx  catalogue.tsx  cms.tsx  conveyancers.tsx  dashboard.tsx  enquiries.tsx  homepage.tsx  index.tsx  login.tsx  profile.tsx  reviews.tsx  safety.tsx  settings.tsx  system-logs.tsx  users.tsx
admin-portal/pages/api/: audit-log.ts  catalogue.ts  cms.ts  conveyancers.ts  enquiries.ts  metrics.ts  (+10 more)
admin-portal/scripts/: check-backend-coverage.cjs
admin-portal/styles/: globals.css
admin-portal/types/: external.d.ts
backend/: .dockerignore  CMakeLists.txt
backend/common/: CMakeLists.txt  env_loader.h  logger.h  security.h
backend/common/persistence/: accounts_repository.cpp  accounts_repository.h  accounts_repository_utils.cpp  accounts_repository_utils.h  audit_repository.cpp  audit_repository.h  escrow_repository.cpp  escrow_repository.h  jobs_repository.cpp  jobs_repository.h  jobs_repository_utils.cpp  jobs_repository_utils.h  postgres.cpp  postgres.h  pqxx_compat.h
backend/gateway/: CMakeLists.txt  Dockerfile
backend/services/identity/: CMakeLists.txt  Dockerfile  main.cpp
backend/services/jobs/: CMakeLists.txt  Dockerfile  main.cpp
backend/services/payments/: CMakeLists.txt  Dockerfile  main.cpp
backend/sql/: 1_schema.sql  2_seed.sql  3_persistence_tests.sql
backend/tests/: CMakeLists.txt  gateway_http_test.cpp  persistence_smoke_test.cpp  repository_logic_test.cpp
docs/: DEPLOY.md  What Each Service is for.docx  compliance.md  conveysafe.md  docker.md  feature-report.md  signature-integration-runbook.md
frontend/: .dockerignore  .env.example  Dockerfile  middleware.ts  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/components/: AdminLayout.tsx  Layout.tsx  ThemeToggle.tsx  UserMenu.tsx
frontend/context/: AuthContext.tsx  PerspectiveContext.tsx  ThemeContext.tsx
frontend/hooks/: useScrollReveal.ts
frontend/lib/: adminSeed.ts  aiChat.ts  aiResponder.ts  audit.ts  auth.ts  authTokens.ts  catalogue.ts  cms.ts  conversationPerspectives.ts  conversations.ts  conveyancingGov.ts  crypto.ts  db.ts  esign.ts  fileScanning.ts  homepage.ts  kyc.ts  notifications.ts  observability.ts  otp.ts  phone.ts  policySignals.ts  psp.ts  quotes.ts  reviews.ts  secure.ts  serverLogger.ts  session.ts  settings.ts  signatures.ts  ssr.ts  trustAccounts.ts  verification.ts
frontend/pages/: _app.tsx  about-us.tsx  account.tsx  chat.tsx  contact-us.tsx  index.tsx  login.tsx  search.tsx  signup.tsx
frontend/styles/: globals.css  home.module.css  search.module.css
infra/: .env.example  docker-compose.yml
infra/env/: .env.example
infra/nginx/: nginx.conf
infra/otel/: otel-config.yaml
infra/prometheus/: prom.yml
infra/tls/: README.md  dev.crt  dev.key  dev_certs.sh
templates/: Contract of Sale Template.docx  Identification and Personal Documents Checklist Template.docx  Post-Hire Templates (For Completeness – Generated After Hiring).docx  Proof of Funds _ Finance Pre-Approval Letter Template.docx  Title Documents Summary Template.docx  Vendor's Statement _ Disclosure Documents Template.docx
tooling/: load-env.js
(+66 files in other folders)
